# poormans

./: .clang-format  .clang-tidy  .clangd  .editorconfig  CMakeLists.txt  README.md
include/: poormans.h
src/: test.c  wolfen.c
src/platformer/: blocks.c  main.c  terrain.c  terrain.h  tick.c
src/platformer/blocks/: dirt.c
